--- a/week05/test.html
+++ b/week05/test.html
@@ -15,25 +15,15 @@
     } */
 
     .wl{
-      background: burlywood;
-    }
-    p{
       float: right;
-    }
-    span{
-      float: left;
-      width: 400px;
-      background: aqua;
-      display: table-cell;
-      display: table-caption;
-      display: block;
-      display: inline-block;
+      background: burlywood;
     }
     .wl::first-letter{
       float: right;
       background: yellowgreen;
     }
     .wl::first-line{
+      float: right;
       background: red;
     }
    
@@ -42,12 +32,8 @@
 
 <body>
   <div class="wl">
-    <p>第二行元素测试<br /> 为什么不是整行都变色</p>
+    <p>第二行元素测试为什么不是整行都变色</p>
     <span>Hello World!！！！！</span>
-    <span>Hello World!</span>
-    <span>Hello World!！</span>
-    <span>Hello World!x'x'x'x'x'x'x'x'x'x'x'x'x'x'x'x'x'x'x</span>
-    <span>Hello World!vvvb</span>
   </div>
   <div id="id">
     <div>
