--- a/week09/Sorted.html
+++ b/week09/Sorted.html
@@ -101,7 +101,7 @@
       async function insert(x, y, prePoint) {
         if (x < 0 || x >= 100 || y < 0 || y >= 100) return;
         if (map[y * 100 + x]) return;
-        await sleep(10);
+        // await sleep(10);
         container.children[y * 100 + x].style.backgroundColor = "lightgreen";
         table[y * 100 + x] = prePoint;
         map[y * 100 + x] = 2;
@@ -118,7 +118,7 @@
           while (x !== start[0] || y !== start[1]) { // 结束点开始往回标记路径，因此已开始位置作为结束逻辑
             path.push(map[y * 100 + x]);
             [x, y] = table[y * 100 + x];
-            await sleep(10);
+            // await sleep(10);
             container.children[y * 100 + x].style.backgroundColor = 'purple';
           }
           console.timeEnd();
